--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+body {
+    background: rgb(204, 204, 225);
+    font-family: Arial, Helvetica, sans-serif;
+}
 .container {
     max-width: 600px;
     margin: 0 auto;
@@ -10,6 +14,11 @@
 
 h1 {
     text-align:  center;
+}
+
+h2 {
+    margin: 0 0 6px;
+    font-size: 30px;
 }
 select {
     display: block;
